--- a/Numero.xcodeproj/xcshareddata/xcschemes/Numero.xcscheme
+++ b/Numero.xcodeproj/xcshareddata/xcschemes/Numero.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Numero.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3052E865201040F500F6F30B"
+               BuildableName = "NumeroTests.xctest"
+               BlueprintName = "NumeroTests"
+               ReferencedContainer = "container:Numero.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -27,6 +41,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3052E851201040F500F6F30B"
+            BuildableName = "Numero.app"
+            BlueprintName = "Numero"
+            ReferencedContainer = "container:Numero.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -39,17 +62,6 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3052E851201040F500F6F30B"
-            BuildableName = "Numero.app"
-            BlueprintName = "Numero"
-            ReferencedContainer = "container:Numero.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -71,8 +83,6 @@
             ReferencedContainer = "container:Numero.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
