--- a/Numero.xcodeproj/xcshareddata/xcschemes/NumeroTests.xcscheme
+++ b/Numero.xcodeproj/xcshareddata/xcschemes/NumeroTests.xcscheme
@@ -5,6 +5,36 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3052E851201040F500F6F30B"
+               BuildableName = "Numero.app"
+               BlueprintName = "Numero"
+               ReferencedContainer = "container:Numero.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3052E865201040F500F6F30B"
+               BuildableName = "NumeroTests.xctest"
+               BlueprintName = "NumeroTests"
+               ReferencedContainer = "container:Numero.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
